<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" 
  android:orientation="vertical">
  <ScrollView android:id="@+id/ScrollView01"
        android:layout_width="fill_parent" android:layout_height="fill_parent"
        android:layout_weight="1">        
  <LinearLayout android:id="@+id/linearLayout1"
          android:layout_width="fill_parent" 
          android:layout_height="fill_parent"
          android:orientation="vertical">
    <TextView android:text="@string/title" 
            android:id="@+id/TextView01" 
            android:textSize="16sp" 
            android:layout_height="wrap_content" 
            android:layout_width="wrap_content">
     </TextView>
    <TextView android:id="@+id/title"
          android:layout_width="fill_parent" 
          android:layout_height="wrap_content" 
          android:textSize="24sp" 
          android:text="">
    </TextView>
    <TextView android:text="@string/startTime" 
            android:id="@+id/TextView01" 
            android:textSize="16sp" 
            android:layout_height="wrap_content" 
            android:layout_width="wrap_content">
     </TextView>
     <LinearLayout android:id="@+id/linearLayout2"
          android:layout_width="fill_parent" 
          android:layout_height="wrap_content">
      <TextView android:text="TextView" 
            android:id="@+id/startDate" 
            android:textSize="24sp" 
            android:layout_height="wrap_content" 
            android:layout_width="wrap_content">
      </TextView>
      <TextView android:layout_marginLeft="20dp" 
            android:text="TextView" 
            android:id="@+id/startTime" 
            android:textSize="24sp" 
            android:layout_height="wrap_content" 
            android:layout_width="wrap_content">
      </TextView>
    </LinearLayout>
    <TextView android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/endTime" 
            android:id="@+id/TextView02" 
            android:textSize="16sp">
    </TextView>
    <LinearLayout android:id="@+id/linearLayout3"
          android:layout_width="fill_parent" 
          android:layout_height="wrap_content">  
      <TextView android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="TextView" 
            android:id="@+id/endDate" 
            android:textSize="24sp">
      </TextView>
      <TextView android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="TextView" 
            android:id="@+id/endTime" 
            android:layout_marginLeft="20dp" 
            android:textSize="24sp">
      </TextView>
    </LinearLayout>
    <TextView android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:text="@string/repetition" 
        android:id="@+id/textView1" 
        android:textSize="16sp">
    </TextView>
    <TextView android:layout_height="wrap_content" 
        android:text="繰り返しなし" 
        android:textSize="24sp"
        android:layout_width="fill_parent" 
        android:id="@+id/repetition">
    </TextView>
    <TextView android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:text="@string/place" 
        android:id="@+id/textView1" 
        android:textSize="16sp">
    </TextView>
    <TextView android:layout_height="wrap_content" 
        android:text="" 
        android:layout_width="fill_parent" 
        android:textSize="24sp"
        android:id="@+id/where">
    </TextView>
   <TextView android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:text="@string/content" 
        android:id="@+id/textView2" 
        android:textSize="16sp">
   </TextView>
   <TextView android:layout_height="wrap_content" 
        android:text="" 
        android:layout_width="fill_parent" 
        android:textSize="24sp"
        android:id="@+id/content" >
   </TextView>
   <TextView android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:text="@string/notification" 
        android:id="@+id/textView2" 
        android:textSize="16sp">
   </TextView>
   <TextView android:layout_height="wrap_content" 
        android:text="通知なし" 
        android:layout_width="fill_parent" 
        android:textSize="24sp"
        android:id="@+id/notification" >
   </TextView>
  </LinearLayout>
  </ScrollView>
  <LinearLayout android:id="@+id/linearLayout3"
      android:layout_width="fill_parent" 
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:orientation="horizontal">
    <Button android:layout_width="fill_parent" 
        android:text="@string/edit" 
        android:layout_height="wrap_content" 
        android:id="@+id/edit" 
        android:layout_alignParentLeft="true"
        android:layout_weight="1">
    </Button>
    <Button android:layout_width="fill_parent" 
        android:layout_alignParentTop="true" 
        android:layout_height="wrap_content" 
        android:id="@+id/delete" 
        android:text="@string/delete" 
        android:layout_alignParentRight="true"
        android:layout_weight="1">
    </Button>
  </LinearLayout>
</LinearLayout>